--- a/launch_agents/com.tensorconclave.grindstatus.plist
+++ b/launch_agents/com.tensorconclave.grindstatus.plist
@@ -21,6 +21,26 @@
 	<key>StartCalendarInterval</key>
 	<array>
 		<dict>
+			<key>Hour</key>
+			<integer>9</integer>
+			<key>Minute</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Hour</key>
+			<integer>12</integer>
+			<key>Minute</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Hour</key>
+			<integer>4</integer>
+			<key>Minute</key>
+			<integer>0</integer>
+		</dict>
+		<dict>
+			<key>Hour</key>
+			<integer>8</integer>
 			<key>Minute</key>
 			<integer>0</integer>
 		</dict>
