[boostrap] Disable super key for app hint

--- a/linux/gnome-keybindings-backup.conf
+++ b/linux/gnome-keybindings-backup.conf
@@ -108,6 +108,7 @@ move-to-workspace-last=@as []
 move-to-workspace-left=@as []
 move-to-workspace-right=@as []
 panel-run-dialog=@as []
+show-desktop=@as []
 switch-applications=['<Primary>Tab']
 switch-applications-backward=['<Primary><Shift>Tab']
 switch-group=['<Super>grave', '<Alt>grave']
@@ -257,7 +258,7 @@ toggle-overview=@as []
 toggle-quick-settings=@as []
 
 [software]
-check-timestamp=int64 1760899914
+check-timestamp=int64 1760962905
 install-timestamp=int64 1760899894
 update-notification-timestamp=int64 1760902472
 
