--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -3,6 +3,7 @@ go = "1.25.3"
 hugo = "0.151.0"
 node = "24.10.0"
 perl = "5.42"
+postgres = "17.7"
 python = "3.14.0"
 ruby = "3.4.7"
 rust = "1.90.0"
