[git] Add git-commit-generator script using OpenAI API
Replace Python script with a Bash script that generates commit messages
from staged changes using the OpenAI Responses API. The script requires
jq and an OPENAI_API_KEY_GIT environment variable, and prompts for user
confirmation before committing. Added alias 'cmg' for easy usage.

--- a/config/git/config
+++ b/config/git/config
@@ -163,6 +163,7 @@
 	cm       = commit-quick
 	cmt      = commit-tagged
 	cmf      = commit-fixup
+	cmg      = commit-generator
 	cmm      = commit-quick-force
 	cms      = commit-squash
 	ca       = commit-amend
