[shell] tmuxify update script

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -91,6 +91,7 @@ bind-key o split-window -v -p 100 \
 
 # Open a new window at the dotfiles directory
 bind-key m new-window -c ~/.dotfiles \; rename-window dotfiles
+bind-key M run-shell "bump --hosts"
 
 # -------- Window Creation / Navigation --------------
 # create a new window
