[tmux] Swap swapping/switching keybinds

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -98,15 +98,15 @@ bind-key M run-shell "bump --hosts"
 unbind c
 bind-key n new-window -c '#{pane_current_path}'
 
-# move current window to the left or right with direction keys
-bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
-bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+# move current window to the left or right with prefix+direction keys
+bind-key -r Left swap-window -t -1\; select-window -t -1
+bind-key -r Right swap-window -t +1\; select-window -t +1
 
-# move between windows with prefix + direction keys
+# move between windows with direction keys
 unbind C-b
 unbind C-f
-bind-key -r Left select-window -t :-
-bind-key -r Right select-window -t :+
+bind-key -n C-S-Left select-window -t :-
+bind-key -n C-S-Right select-window -t :+
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
