--- a/config/gh/hosts.yml
+++ b/config/gh/hosts.yml
@@ -1,5 +1,5 @@
 github.com:
     git_protocol: https
     users:
-        inertialgradient:
-    user: inertialgradient
+        damphessian:
+    user: damphessian
