[tmux] Reassign prev/next window

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -99,14 +99,14 @@ unbind c
 bind-key n new-window -c '#{pane_current_path}'
 
 # move current window to the left or right with prefix+direction keys
-bind-key -r Left swap-window -t -1\; select-window -t -1
-bind-key -r Right swap-window -t +1\; select-window -t +1
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
 
 # move between windows with direction keys
 unbind C-b
 unbind C-f
-bind-key -n C-S-Left select-window -t :-
-bind-key -n C-S-Right select-window -t :+
+bind-key -n C-] previous-window # iterm: 0x1d
+bind-key -n C-\\ next-window    # iterm: 0x1c
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
