[tmux] Add hex code documentation

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -96,7 +96,10 @@ bind-key M run-shell "bump --hosts"
 # -------- Window Creation / Navigation --------------
 # create a new window
 unbind c
-bind-key n new-window -c '#{pane_current_path}'
+bind-key n new-window -c '#{pane_current_path}' # hex code: 01 6E
+
+# kill the current window
+bind-key K kill-window # hex code: 4B
 
 # move current window to the left or right with prefix+direction keys
 bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
