[git] Add stream option to commit-generator alias
- Enable `--stream` flag for commit-generator

--- a/config/git/config
+++ b/config/git/config
@@ -163,7 +163,7 @@
 	cm       = commit-quick
 	cmt      = commit-tagged
 	cmf      = commit-fixup
-	cmg      = commit-generator
+	cmg      = commit-generator --stream
 	cmm      = commit-quick-force
 	cms      = commit-squash
 	ca       = commit-amend
