[git] Add air_llama provider

--- a/config/git-commit-generator/config.yml
+++ b/config/git-commit-generator/config.yml
@@ -24,3 +24,9 @@ providers:
     model: "deepseek-coder-v2-lite-instruct-mlx"
     api_key_env: "LMSTUDIO_API_KEY"
     protocol: "chat"
+
+  air_llama:
+    base_url: "http://jmr-air.local:1234/v1"
+    model: "llama-3.2-3b-instruct"
+    api_key_env: "LMSTUDIO_API_KEY"
+    protocol: "chat"
